2015-05-17  Jamison Hope  <jrh@theptrgroup.com>

	* RealNum.java (log): Call DComplex.log if zero to ensure that
	the logarithm of -0.0 is -inf.0+PIi.

2015-05-17  Per Bothner  <per@bothner.com>

	* RealNum.java (angle): Return floating zero for non-negative value.
	* DFloNum.java (zero): New constant.
	* DComplex.java, RatNum.java: Use zero.

2015-05-15  Jamison Hope  <jrh@theptrgroup.com>

	Fixes for (expt 0 q) and (expt 0.0 q) to conform to R7RS
	language.
	* Complex.java (power): If both arguments are exact and the first
	argument is zero, return exact zero if the real-part of the second
	argument is positive and return exact one if the second argument
	is zero.
	* Quaternion.java (power): Likewise.
	* DComplex.java (power): If x_re and x_im are both 0.0, return
	inexact zero if y_re > 0 and return inexact one if y_re and y_im
	are both 0.0.
	* DQuaternion.java (power): If x_re, x_im, x_jm, and x_km are all
	0.0, return inexact zero if y_re > 0 and return inexact one if
	y_re, y_im, y_jm, and y_km are all 0.0.

2015-05-10  Per Bothner  <per@bothner.com>

	* DFloNum.java (valueOf): New method.
	(make): Deprecate and call valueOf.
	* IntNum.java (valueOf): Various new aliases of make.
	(makeU): Renamed to valueOfUnsigned.
	* RatNum.java (rationalize): Return inexact 0 rather than exact 0
	if arguments are inexact.

2014-12-18  Jamison Hope  <jrh@theptrgroup.com>

	* Complex.java (polar): Change return type from DComplex to
	Complex and return RealNum if angle is exact zero.
	* DComplex.java (power): Update return type accordingly.

2014-11-17  Jamison Hope  <jrh@theptrgroup.com>

	Implemented quaternions.
	* Quaternion.java, CQuaternion.java, DQuaternion.java: New files.
	* Makefile.am: Update accordingly.
	* Quantity.java: Change number() type to Quaternion, add accessors
	for "j" and "k" parts.
	* CQuantity.java (<init>, number, readExternal): Update
	accordingly.
	* DQuantity.java (number): Likewise.